# qtpluginexample

./: .gitignore  CMakeLists.txt  ClockConfig.cmake.in  ClockConfigVersion.cmake.in
plugin_use/: CMakeLists.txt
plugin_use/src/: clock.cpp  clock.h  clockday.cpp  clockday.h  clockday.ui  main.cpp
plugin_use/ui/: clock.ui  clockday.ui
plugin_use2/: CMakeLists.txt
plugin_use2/src/: main.cpp
src/: CMakeLists.txt  analogclock.cpp  analogclock.h  analogclockplugin.cpp  analogclockplugin.h  clockversion.h.in  digitalclock.cpp  digitalclockplugin.h  main.cpp  testclocklib.cpp  testclocklib.h
src/abstractclock/: CMakeLists.txt  abstractclock.cpp  abstractclock.h  abstractclockplugin.h
src/analogclock/: CMakeLists.txt  analogclock.cpp  analogclock.h  analogclockplugin.cpp  analogclockplugin.h
src/clock/: CMakeLists.txt  clock.cpp  clock.h  clockplugin.cpp  clockplugin.h
src/digitalclock/: CMakeLists.txt  digitalclock.cpp  digitalclock.h  digitalclockplugin.cpp  digitalclockplugin.h
